# BioactivityDataAcquisition

./: .coverage  .cursorrules  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  debug_assay_api.py  debug_document_fetch.py  debug_target_fetch.py  debug_testitem_fetch.py  final_report.txt  install_output.txt  naming_report.txt  pipeline_output.txt  pyproject.toml  pytest.ini  run_all_pipelines.py  run_assay_chembl.py  run_bioetl.py  run_cmd.py  run_log.txt  run_log_2.txt  run_log_activity.txt  run_log_new.txt  run_log_retry.txt  run_pipeline.py  tmp-test.mmd  tmp_test.mmd  val_out.txt  validation_out.txt
.cursor/: memory.md  tmp_extract_diagrams.py
.cursor/commands/: benchmark-pagination.md  check-cli-contract.md  ci-matrix.md  data-dictionary-sync.md  diff-artifacts.md  enforce-io-determinism.md  gen-pandera-for-artifact.md  golden-regenerate.md  migrate-cursorrules-to-mdc.md  pipeline-skeleton.md  profile-pipeline.md  render-diagrams.md  review-pipeline.md  run-activity-chembl.md  run-assay-chembl.md  run-chembl-all.md  run-document-chembl.md  run-target-chembl.md  run-testitem-chembl.md  schema-lint.md  secrets-audit.md  smoke-run.md  update-docs-from-code.md  validate-config.md  verify-determinism.md  write-tests-for-pipeline.md
.cursor/memories/: fix_normalization_service.md
.cursor/plans/: bio-13c0a9dd.plan.md  bioetl-4243c47c.plan.md  bioetl-documentation-e3b2af17.plan.md
.cursor/rules/: 00-core-principles.mdc  01-naming-conventions.mdc  02-python-style.mdc  03-logging.mdc  04-data-schemas.mdc  05-deterministic-io.mdc  06-testing.mdc  07-cli-contracts.mdc  08-api-clients-temp.mdc  08-api-clients.mdc  09-etl-architecture.mdc  10-secrets-and-config.mdc  11-abc-default-impl-policy.mdc  12-entity-naming-policy.mdc  13-documentation-standards.mdc  README.md  cursorrules.mdc
.github/workflows/: duplication-complexity.yml  import-linter.yml
.hypothesis/constants/: 01f23ceef69ccb56  02034d7d78c54391  02736245c0b6433c  03269e0b23dd7627  047c128750008a30  04c457b7d1a3155d  04d1391a3bb1847c  057dc1c2a760c7ea  0700c0a04b9bee9e  07257ad71973cf0c  0a418989dcdf21b7  0ab4fcc38fe46d2e  0ae6c5d9a5dbe26e  0b64d50e960676c8  0bdca8e02e94e25b  0c20cf679b6c21fe  0d2972beb68f01c0  0d4604ae9a83cbad  0d57737c3606b6b1  0d908bda3c7b67aa  0e531dda71c22e5c  0fb9d34a8156a48c  14139abf28f52f5b  143ce1b99a7858a9  146f9133b7513a86  1477ad6ef82a980f  15a9c598adbe3328  174462ca6322f8ce  (+249 more)
configs/: README.md  hashing.yaml  naming_exceptions.yaml  normalization.yaml  providers.example.yaml  providers.yaml
docs/: 00-map.md  31-etl-integration-architecture-plan.docx  ABC_INDEX.md  FILE_POLICY.md  content-audit-report.md  domain-class-diagrams.md  review-report.md
pdf/: ABC.csv  chembl_piplines.csv  Архитектурный план проекта.docx
tests/: assay_chembl_golden.py  conftest.py  document_chembl_golden.py  target_chembl_golden.py  test_cli.py  test_hashing.py  test_pipeline_outputs.py  testitem_chembl_golden.py
tools/: generate_abc_index.py  render_diagrams.ps1
(+1116 files in other folders)
