[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioetl"
version = "0.1.0"
description = "Bioactivity Data Acquisition ETL"
authors = [
  { name="BioETL Team", email="team@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.18.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "types-PyYAML>=6.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bioetl = "bioetl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "src"

