[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioetl"
version = "0.1.0"
description = "Bioactivity Data Acquisition ETL"
authors = [
  { name="BioETL Team", email="team@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.18.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "types-PyYAML>=6.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis==6.103.0",
    "black>=24.3.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "import-linter>=2.0.0",
]

[project.scripts]
bioetl = "bioetl.interfaces.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["bioetl"]
combine_as_imports = true
force_sort_within_sections = true
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "bioetl.infrastructure.*",
  "bioetl.interfaces.*",
]
ignore_errors = true

